# AIMedBench

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
configs/: gcp_config.yaml
data/: clinvar_tiny.tsv  simulated_variants.tsv  truth_labels.tsv
docs/: 01_landscape.md  02_framework.md  03_feasibility.md
envs/: environment.yml
notebooks/: benchmark_dashboard.ipynb  spliceai_demo.ipynb
scripts/: emit_predictions_from_wide.py  join_one_tool.py
src/: aggregate.py  evaluate.py  main.py  predictions_position.py  predictions_random.py  report.py  utils.py
tests/: test_metrics.py
workflow/: Snakefile
